<resources>
    <string name="app_name">Haircuts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete_element">Eliminar</string>
    <string name="action_exit_App">Salir</string>

    <string name="menu_profile">Perfil</string>
    <string name="menu_service">Servicios</string>
    <string name="menu_barbers">Barberos</string>
    <string name="menu_sales">Ventas</string>
    <string name="menu_feedback">Escríbenos</string>
    <string name="nombre_servicio">Aqui va el nombre del servicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_title">Servicio</string>
    <string name="item_desc">Precio</string>
    <string name="leyenda">Lista de articulos en su cesta</string>
    <string name="cobrar">Cobrar</string>

</resources>
